display accom with name and price based on selection: booking.html

--- a/booking.html
+++ b/booking.html
@@ -199,12 +199,12 @@
                     </div>
                     <div>
                         <label class="block text-gray-300 mb-2">Accommodation Type</label>
-                        <div class="acoomcontainer block w-full flex md:flex-row flex-col gap-4">
-                            <div class="accom flex-1 h-full py-3 px-4">
+                        <div class="block w-full flex md:flex-row flex-col gap-4" id="acoomContainer">
+                            <!-- <div class="accom flex-1 h-full py-3 px-4">
                                 <h3 class="font-orbitron text-lg mb-2 text-glow text-neon-blue">Standard Cabin</h3>
                                 <p>Comfortable private quarters with basic amenities</p>
                             </div>
-                            <!-- <div class="accom flex-1 h-full py-3 px-4">
+                            <div class="accom flex-1 h-full py-3 px-4">
                                 <h3 class="font-orbitron text-lg mb-2 text-glow text-neon-blue">Luxury Suite</h3>
                                 <p>Spacious suite with premium amenities and viewports</p>
                             </div>
