--- a/booking.html
+++ b/booking.html
@@ -32,6 +32,16 @@
         }
     </script>
     <style>
+        #addingpassanger:disabled {
+            cursor: not-allowed;
+            opacity: 0.6;
+        }
+    
+         #addingpassanger:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(14, 165, 233, 0.4);
+        }
+
         body {
             background: linear-gradient(to bottom, #0a0a18, #1a1a2e, #16213e);
             background-attachment: fixed;
@@ -209,12 +219,13 @@
                             <h1 class="font-orbitron text-3xl mb-2 text-glow">Personal Information</h1>
                         </div>
                         <div id="pasengersinfos">
-                            
+
 
                         </div>
                     </div>
                     <button type="submit"
-                        class="border border-neon-blue w-full text-neon-blue px-8 py-3 rounded-lg font-bold hover:bg-neon-blue/10 transition-colors" id="addpaasenger">
+                        class="addpassbutton border border-neon-blue w-full text-neon-blue px-8 py-3 rounded-lg font-bold hover:bg-neon-blue/10 transition-colors"
+                        id="addpaasenger">
                         Add Passanger
                     </button>
                     <button type="submit" class="btn-primary text-white w-full py-3 rounded-lg font-bold glow">
