Total calculation :booking.html.js

--- a/booking.html
+++ b/booking.html
@@ -219,9 +219,12 @@
                             <h1 class="font-orbitron text-3xl mb-2 text-glow">Personal Information</h1>
                         </div>
                         <div id="pasengersinfos">
-
+                            
 
                         </div>
+                    </div>
+                    <div class="total-div login-card p-6">
+                        <h1 class="font-orbitron text-2xl mb-2 text-glow text-center">Total:$<span id="totalCost">0</span></h1>
                     </div>
                     <button type="submit"
                         class="addpassbutton border border-neon-blue w-full text-neon-blue px-8 py-3 rounded-lg font-bold hover:bg-neon-blue/10 transition-colors"
