--- a/mybooking.html
+++ b/mybooking.html
@@ -174,7 +174,7 @@
             </div>
     </nav>
     <section class="py-12 px-6 text-center">
-        <h1 class="font-orbitron text-4xl md:text-5xl font-bold mb-6 text-glow">Book Your Space Journey</h1>
+        <h1 class="font-orbitron text-4xl md:text-5xl font-bold mb-6 text-glow">Your Bookings</h1>
         <p class="text-xl max-w-3xl mx-auto text-gray-300">
             Begin your adventure to the stars. Fill out the form below to reserve your spot on our next space voyage.
         </p>
@@ -183,76 +183,8 @@
     <main class="container mx-auto px-4 py-8 relative z-10">
         <div class=" w-full max-w-md md:max-w-lg lg:max-w-[950px] mx-auto py-6">
             <!-- Login Card -->
-            <div class="block login-card p-8">
-                <div class="text-left mb-8">
-                    <h1 class="font-orbitron text-3xl mb-2 text-glow">Journey Details</h1>
-                </div>
-
-                <form class="space-y-6">
-                    <div>
-                        <label class="block text-gray-300 mb-2">Destination</label>
-                        <select type="text" class="form-input w-full px-4 py-3" id="destinationselect">
-                            <option value="">Select your destination</option>
-                        </select>
-                    </div>
-
-                    <div>
-                        <label class="block text-gray-300 mb-2">Departure Date</label>
-                        <input type="date" class="form-input w-full px-4 py-3" placeholder="mm/dd/yyyy" id="departuredate">
-                    </div>
-
-                    <div>
-                        <label class="block text-gray-300 mb-2">Numbers of Passengers</label>
-                        <div class="flex flex-row gap-4 items-center">
-                            <div><label>
-                                    <input type="radio" name="passengers" value="SoloTravaler">
-                                    Solo Traveler
-                                </label></div>
-                            <div><label>
-                                    <input type="radio" name="passengers" value="Couple">
-                                    Couple(2)
-                                </label></div>
-                            <div><label>
-                                    <input type="radio" name="passengers" value="Group">
-                                    Group(3-6)
-                                </label></div>
-                        </div>
-                    </div>
-                    <div>
-                        <label class="block text-gray-300 mb-2">Accommodation Type</label>
-                        <div class="block w-full flex md:flex-row flex-col gap-4" id="acoomContainer">
-
-                        </div>
-                    </div>
-                    <div class="mt-6 pt-6 border-t border-neon-blue/20">
-                        <div class="text-left mb-8">
-                            <h1 class="font-orbitron text-3xl mb-2 text-glow">Personal Information</h1>
-                        </div>
-                        <div id="pasengersinfos">
-
-
-                        </div>
-                    </div>
-                    <div class="total-div login-card p-6">
-                        <h1 class="font-orbitron text-2xl mb-2 text-glow text-center">Total:$<span
-                                id="totalCost">0</span></h1>
-                    </div>
-                    <button type="submit"
-                        class="addpassbutton border border-neon-blue w-full text-neon-blue px-8 py-3 rounded-lg font-bold hover:bg-neon-blue/10 transition-colors"
-                        id="addpaasenger">
-                        Add Passanger
-                    </button>
-                    <button type="submit" class="btn-primary text-white w-full py-3 rounded-lg font-bold glow"
-                        id="confirmbooking">
-                        Confirm Booking
-                    </button>
-                    <div class="mt-6 pt-6 border-t border-neon-blue/20">
-                        <p class="text-gray-400 text-center">
-                            By confirming, you agree to our
-                            <a href="#" class="text-neon-blue hover:underline">Termes of Service</a> and<a href="#"
-                                class="text-neon-blue hover:underline"> Space Travel Agreement.</a>
-                        </p>
-                    </div>
+            <div class="block login-card p-8" id="mybookingsbontainer">
+                
             </div>
             </form>
         </div>
@@ -262,7 +194,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-space-dark border-t border-neon-blue/20 py-8 mt-12 relative z-10">
+    <footer class="bg-space-dark border-t border-neon-blue/20 py-8 mt-12 relative bottom-0 w-full z-10">
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="mb-4 md:mb-0">
@@ -291,7 +223,7 @@
         </div>
     </footer>
 
-    <script src="bookingpage.js"></script>
+    <script src="mybooking.js"></script>
     <script src="login.js"></script>
 </body>
 
